--- a/1 - fundamentos/bloco-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
+++ b/1 - fundamentos/bloco-03-introducao-a-html-e-css/dia-01-html-e-css-estruturas-de-pagina/index.html
@@ -16,5 +16,8 @@
     </ul>
     <br>
     <img src="https://s2.glbimg.com/7K2BU-SeFCCfZrGRQN1SmAvPYTU=/512x320/smart/e.glbimg.com/og/ed/f/original/2020/02/27/trybe01.jpg" alt="Pessoas estudantes da Trybe.">
+    <br>
+    <img src="images/trybe02.webp" alt="Funcionários da trybe reunidos" width="510px">
 </body>
+
 </html>
